--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,22 @@ jobs:
           command: |
             source .devops-capstone/bin/activate
             make lint
+    deploy-cfn:
+      parameters:
+        stack-name:
+          description: Name of the CloudFormation stack
+          type: string
+      executor: aws-cli/default
+      steps:
+        - checkout
+        - aws-cli/setup
+        - run:
+            name: Deploy Cloudformation Template with new Docker image
+            command: |
+              aws cloudformation deploy \
+              --template Cloudformation/cloudformation.yml \
+              --stack << parameters.stack-name >> \
+              --parameter-overrides ImageTag=${CIRCLE_SHA1}
 workflows:
   default:
     jobs:
@@ -44,3 +60,8 @@ workflows:
               tag: ['$(<app/VERSION.txt)', 'latest']
               update-description: [true]    
           requires: [init]
+    deploy:
+      - deploy-cfn:
+        context:
+          - aws-12345-us-east-2
+        stack-name: capstone-project
