--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,9 @@ jobs:
           command: |
             aws cloudformation deploy \
             --template Cloudformation/cloudformation.yml \
-            --stack << parameters.stack-name >> 
+            --tags project=<< parameters.stack-name >> \
+            --stack-name "<< parameters.stack-name >>" \
+            --region ${AWS_DEFAULT_REGION} \
             --parameter-overrides ImageTag=${CIRCLE_SHA1}
 workflows:
   default:
@@ -62,7 +64,5 @@ workflows:
               update-description: [true]    
           requires: [init]
       - deploy-cfn:
-          context:
-            - aws-12345-us-east-2
           stack-name: capstone-project
           requires: [docker/publish]
