--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,24 +31,45 @@ jobs:
           command: |
             source .devops-capstone/bin/activate
             make lint
-  deploy-cfn:
-    parameters:
-      stack-name:
-        description: Name of the CloudFormation stack
-        type: string
-    executor: aws-cli/default
+  deploy:
+    docker:
+      - image: circleci/python:3.7
     steps:
       - checkout
-      - aws-cli/setup
       - run:
-          name: Deploy Cloudformation Template with new Docker image
+          name: Install awscli and gettext-base
           command: |
-            aws cloudformation deploy \
-            --template Cloudformation/cloudformation.yml \
-            --tags project=<< parameters.stack-name >> \
-            --stack-name "<< parameters.stack-name >>" \
-            --region ${AWS_DEFAULT_REGION} \
-            --parameter-overrides ImageTag=${CIRCLE_SHA1}
+            sudo pip3 install awscli
+            sudo apt-get install gettext-base
+      - run:
+          name: Install aws-iam-authenticator
+          command: |
+            curl -o aws-iam-authenticator curl -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/aws-iam-authenticator
+            chmod +x ./aws-iam-authenticator
+            sudo mv ./aws-iam-authenticator /usr/local/bin/aws-iam-authenticator
+      - run:
+          name: Install kubectl
+          command: |
+            curl -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/kubectl
+            chmod +x ./kubectl
+            sudo mv ./kubectl /usr/local/bin/kubectl
+      - run:
+          name: Connect to cluster
+          command: |
+            aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $CLUSTER_NAME
+      - run:
+          name: Prepare K8S template
+          command: |
+            rm -rf Cloudformation/.generated && mkdir -p Cloudformation/.generated
+            for f in Cloudformation/deployment.yaml
+              do
+              envsubst < $f > "Cloudformation/.generated/$(basename $f)"
+            done
+      - run:
+          name: Deploy
+          command: |
+            kubectl apply -f Cloudformation/.generated/
+            kubectl get pod
 workflows:
   default:
     jobs:
@@ -63,6 +84,5 @@ workflows:
               tag: ['$(<app/VERSION.txt)', 'latest']
               update-description: [true]    
           requires: [init]
-      - deploy-cfn:
-          stack-name: capstone-project
+      - deploy:
           requires: [docker/publish]
