--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,45 +31,24 @@ jobs:
           command: |
             source .devops-capstone/bin/activate
             make lint
-  deploy:
-    docker:
-      - image: circleci/python:3.7
+  deploy-cfn:
+    parameters:
+      stack-name:
+        description: Name of the CloudFormation stack
+        type: string
+    executor: aws-cli/default
     steps:
       - checkout
+      - aws-cli/setup
       - run:
-          name: Install awscli and gettext-base
+          name: Deploy Cloudformation Template with new Docker image
           command: |
-            sudo pip3 install awscli
-            sudo apt-get install gettext-base
-      - run:
-          name: Install aws-iam-authenticator
-          command: |
-            curl -o aws-iam-authenticator curl -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/aws-iam-authenticator
-            chmod +x ./aws-iam-authenticator
-            sudo mv ./aws-iam-authenticator /usr/local/bin/aws-iam-authenticator
-      - run:
-          name: Install kubectl
-          command: |
-            curl -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/kubectl
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-      - run:
-          name: Connect to cluster
-          command: |
-            aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $CLUSTER_NAME
-      - run:
-          name: Prepare K8S template
-          command: |
-            rm -rf Cloudformation/.generated && mkdir -p Cloudformation/.generated
-            for f in Cloudformation/deployment.yaml
-              do
-              envsubst < $f > "Cloudformation/.generated/$(basename $f)"
-            done
-      - run:
-          name: Deploy
-          command: |
-            kubectl apply -f Cloudformation/.generated/
-            kubectl get pod
+            aws cloudformation deploy \
+              --template-file cloudformation/management.yml \
+              --tags project=${ENVIRONMENT_NAME} \
+              --stack-name "${ENVIRONMENT_NAME}-eks-management" \
+              --region ${AWS_DEFAULT_REGION} \
+              --parameter-overrides file://cloudformation/management-parameters.json
 workflows:
   default:
     jobs:
@@ -84,5 +63,6 @@ workflows:
               tag: ['$(<app/VERSION.txt)', 'latest']
               update-description: [true]    
           requires: [init]
-      - deploy:
+      - deploy-cfn:
+          stack-name: capstone-project
           requires: [docker/publish]
